--- a/public/css/home.css
+++ b/public/css/home.css
@@ -1,25 +1,7 @@
-html, body {
-}
 
 .home-container {
     position: absolute;
     width: 100%;
-}
-
-
-.add-recipe-button {
-    height:40px; 
-    width:80px; 
-    margin: 0px -50px; 
-    position:relative;
-    left:45%;
-}
-
-.delete-recipe-button {
-    height:40px; 
-    width:80px;
-    position: relative;
-    left: 55%;
 }
 
 
@@ -46,15 +28,6 @@ html, body {
     backface-visibility: hidden;
 }
 
-.middle {
-    transition: .5s ease;
-    opacity: 0;
-    top: 50%;
-    left: 50%;
-    transform: translate(0%, -100%);
-    -ms-transform: translate(-50%, -50%);
-    text-align: relative;
-}
 
 .text:hover {
     opacity: 0.9;
@@ -112,15 +85,17 @@ border-radius: 50%;
     margin: 1px;
 } */
 
-.foodcontent:hover .image{
-    opacity: 0.3;
-  }
+.foodcontent{
+    height: 276px;
+    width: 276px;    
+}
 
-  .foodcontent:hover .middle {
-    opacity: 1;
-  }
 
-  .grid { 
+.foodcontent:hover .middle {
+    opacity: 0.9;
+}
+
+.grid { 
     text-align: center;
     display: grid;
     grid-template-columns: 276px 276px 276px 276px;
@@ -128,10 +103,10 @@ border-radius: 50%;
     justify-content: center;
     width: 1200px;
     margin: 0 auto;
-    background: #f5f5f5;
+    grid-gap: 3px;
 }
 
-.grid img {
+.image {
     border: 1px solid #ccc;
     box-shadow: 2px 2px 6px 0px  rgba(0,0,0,0.3);
     width: 276px; 
@@ -141,23 +116,28 @@ border-radius: 50%;
     opacity: 1;
     transition: .5s ease;
     backface-visibility: hidden;
-
 }
 
 .middle {
-    transition: .5s ease;
     opacity: 0;
     position: relative;
-    top: -40%;
+    top: -50%;
     left: 50%;
+    height: 100%;
+    width: 100%;
     transform: translate(-50%, -50%);
     -ms-transform: translate(-50%, -50%);
     text-align: center;    
-    background-color: #4CAF50;
+    background-color: #65CCB8;
     color: white;
-    font-size: 16px;
+    font-size: 14px;
     padding: 16px 32px;
   }
+
+.middle:hover {
+    cursor: pointer;
+}
+
 
 /*Carousel things*/
 .carousel-inner>.item>img, .carousel-inner>.item>a>img {
@@ -167,3 +147,43 @@ border-radius: 50%;
     line-height: 1;
     margin:auto;
 }
+
+
+
+/* The Modal (background) */
+.modal {
+    display: none; /* Hidden by default */
+    position: fixed; /* Stay in place */
+    z-index: 1050; /* Sit on top */
+    left: 0;
+    top: 0;
+    width: 100%; /* Full width */
+    height: 100%; /* Full height */
+    overflow: auto; /* Enable scroll if needed */
+    background-color: rgb(0,0,0); /* Fallback color */
+    background-color: rgba(0,0,0,0.4); /* Black w/ opacity */
+  }
+  
+  /* Modal Content/Box */
+  .modal-content {
+    background-color: #fefefe;
+    margin: 15% auto; /* 15% from the top and centered */
+    padding: 20px;
+    border: 1px solid #888;
+    width: 80%; /* Could be more or less, depending on screen size */
+  }
+  
+  /* The Close Button */
+  .close {
+    color: #aaa;
+    float: right;
+    font-size: 28px;
+    font-weight: bold;
+  }
+  
+  .close:hover,
+  .close:focus {
+    color: black;
+    text-decoration: none;
+    cursor: pointer;
+  }
