--- a/public/css/recipe_page.css
+++ b/public/css/recipe_page.css
@@ -39,17 +39,13 @@ body {
     padding: 2px 16px;
 }
   
-img {
-    border-radius: 5px 5px 0 0;
-    height: 350px;
-}
+
 
 .single-recipe {
     width: 1200px;
-    padding: 20px;
     margin: 0 auto;
     min-height: 500px;
-    max-height: 600px;
+    max-height: 540px;
 }
 
 .single-recipe-left {
@@ -65,16 +61,10 @@ img {
     display: table-cell;
     text-align: left;
     background-color: white;
-    max-height: 500px;
+    max-height: 540px;
     padding: 20px 20px 5px 20px;
-}
-
-.single-recipe-right-entry {
-    height: 100%;
-    width: 50%;
-    float: left;
-    max-height: 350px;
-    overflow-y: scroll;
+    text-align: center;
+    border-bottom: 2px solid rgb(233, 233, 233);
 }
 
 .post-image {
@@ -94,12 +84,17 @@ img {
 }
 
 .recipe-hover {
-    display: flex;
-    position: fixed;
     top: 0;
     left: 0;
     right: 0;
     bottom: 0;
+    display: flex;
+    position: fixed;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    text-align: center;
+    min-height: 100vh;
     overflow: auto;
     z-index: 100;
     background: rgba(0, 0, 0, 0.85);
@@ -108,4 +103,23 @@ img {
 
 .recipe-hidden {
     display: none !important;
+}
+
+.hide-single {
+    z-index: 1000;
+    color: black;
+    float: right;
+}
+
+.hide-single:hover {
+    cursor: pointer;
+}
+
+.ingredients {
+    list-style-type: none;
+    padding: 0;
+}
+
+.get-recipe-btn {
+    bottom: 5px;
 }
