--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -1,7 +1,12 @@
 /* GENERAL CSS */
+html {
+    scroll-behavior: smooth;
+}
+
 html, body {
     max-width: 100%;
     background-color: #f5f5f5;
+    
 }
 
 h1, h2, h3, h4, p, label, button, li, footer, a {
@@ -23,17 +28,32 @@ footer, a {
     color: white;
 }
 
+.add-recipe-button {
+    height:40px; 
+    width:80px; 
+    margin: 0px -50px; 
+    position:relative;
+    left:45%;
+}
+
+.delete-recipe-button {
+    height:40px; 
+    width:80px;
+    position: relative;
+    left: 55%;
+}
+
 .nav-text {
     font-family: 'Montserrat', sans-serif;
 }
 
-.navbar-margin {
-    display: inline!important;
+.nav-item {
+    margin-right: 20px;
 }
 
 
 .nav-single:hover {
-    border-bottom: 2px solid currentColor;
+    border-bottom: 2px solid white;
     cursor: pointer;
 }
 
@@ -154,7 +174,7 @@ input[type=text], select {
     display: table-cell;
     text-align: left;
     background-color: white;
-    padding: 20px;
+    padding: 10px;
 }
 
 .post-name {
@@ -195,8 +215,9 @@ input[type=text], select {
 }
 
 .post-btn {
-    width: 100px;
     font-size: 20px;
+    margin-top: -10px;
+    float: left;
 }
 
 /* .post-button-entry:hover {
@@ -209,8 +230,17 @@ input[type=text], select {
 
 }
 
-.post-comments {
+.post-comment {
+    width: 100%;
+    resize: none;
+    margin-bottom: 5px;
+    border-radius: 15px;
+    padding: 5px 0px 0px 5px;
+    border: 2px solid rgb(226, 225, 225);
+}
 
+.post-comment:focus {
+    outline: none;
 }
 
 .comment-user-pic {
@@ -250,14 +280,73 @@ input[type=text], select {
     position: relative;
     font-weight: bold;
     padding: 5px 15px;
+    margin-bottom: 5px;
     color: white;
     background-color: #43d65e;
     border-color: transparent;
     border-radius: 100px;
+    float: right;
 }
 
 .comment-form {
     width: 90%;
     position: absolute;
     bottom: 0;
+}
+
+.recipe-hover {
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    display: flex;
+    position: fixed;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    text-align: center;
+    min-height: 100vh;
+    overflow: auto;
+    z-index: 100;
+    background: rgba(0, 0, 0, 0.85);
+    display: -webkit-flex;
+}
+
+.recipe-hidden {
+    display: none !important;
+}
+
+.hide-single {
+    z-index: 1000;
+    color: black;
+    float: right;
+}
+
+.hide-single:hover {
+    cursor: pointer;
+}
+
+#scrollbar::-webkit-scrollbar-track
+{
+	-webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.3);
+	border-radius: 10px;
+}
+
+#scrollbar::-webkit-scrollbar
+{
+	width: 12px;
+}
+
+#scrollbar::-webkit-scrollbar-thumb
+{
+	border-radius: 10px;
+	-webkit-box-shadow: inset 0 0 6px rgba(0,0,0,.3);
+	background-color: rgb(80, 78, 78);
+}
+
+.recipe-steps {
+    height: 300px;
+    padding: 10px;
+    overflow-y: scroll;
+    list-style-type: none;
 }
