--- a/views/home.ejs
+++ b/views/home.ejs
@@ -2,192 +2,45 @@
 <html>
 
 <head>
-        <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/js/bootstrap.min.js"></script>
-        <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/css/bootstrap.min.css">
     <% include ./partials/header.ejs %>
     <link rel='stylesheet' type="text/css" href='/css/home.css'>
     <script type="text/javascript" src="/js/home.js"></script>
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    <!-- <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/js/bootstrap.min.js"></script>
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/css/bootstrap.min.css"> -->
     
 </head>
 
 <body>
     <div class='home-container'>
             <% include ./partials/navbar.ejs %>
-            <!-- <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#exampleModal"
-            data-whatever="@mdo">Upload Recipe</button> -->
-            <div id="myCarousel" class="carousel slide" data-ride="carousel">
-                <!-- Indicators -->
-                <ol class="carousel-indicators">
-                    <li data-target="#myCarousel" data-slide-to="0" class="active"></li>
-                    <li data-target="#myCarousel" data-slide-to="1"></li>
-                    <li data-target="#myCarousel" data-slide-to="2"></li>
-                </ol>
-        
-                <!-- Wrapper for slides -->
-                <div class="carousel-inner">
-                    <div class="item active">
-                        <img src="https://www.godairyfree.org/wp-content/uploads/2012/09/peruvianavocados.jpg" alt="advocado">
-                        <div class="carousel-caption">
-                            <h3>Advocados</h3>
-                            <p></p>
-                        </div>
-                    </div>
-        
-                    <div class="item">
-                        <img src="https://www.rachelcooks.com/wp-content/uploads/2018/01/shrimp-tacos-avocado-mango-salsa-web-5-of-12-600x550.jpg"
-                            alt="tacos">
-                        <div class="carousel-caption">
-                            <h3>tacos</h3>
-                            <p>Yum!</p>
-                        </div>
-                    </div>
-        
-                    <div class="item">
-                        <img src="https://ik2oa1wlcj46xaafvt85daad-wpengine.netdna-ssl.com/wp-content/uploads/2019/01/Waldorf-Salad-600x550.png"
-                            alt="Salad">
-                        <div class="carousel-caption">
-                            <h3> Salad</h3>
-                            <p>Healthy!</p>
-                        </div>
-                    </div>
-                </div>
-        
-                <!-- Left and right controls -->
-                <a class="left carousel-control" href="#myCarousel" data-slide="prev">
-                    <span class="glyphicon glyphicon-chevron-left"></span>
-                    <span class="sr-only">Previous</span>
-                </a>
-                <a class="right carousel-control" href="#myCarousel" data-slide="next">
-                    <span class="glyphicon glyphicon-chevron-right"></span>
-                    <span class="sr-only">Next</span>
-                </a>
-            </div>
-        
-        
-        
-        
-        
-        
+            <% include ./partials/upload.ejs %>
         
         
             <div class="grid">
+                <% let i = 0; %>
                 <% posts.reverse().forEach(p => { %>
-                <div class="foodcontent">
-                    <img src="/image/<%=p.image.data%>" alt="Avatar" class="image" />
-                    <div class="middle">
-                            <h3><%= p.name %></h3>
-                            <%= p.body %>
+                    <div class='show-single-recipe<%=i%> recipe-hover recipe-hidden'>
+                        <% include ./partials/recipe-partial.ejs %>
                     </div>
-                </div>
+                    <div class="foodcontent">
+                        <img src="/image/<%=p.image.data%>" alt="Avatar" class="image" />
+                        <div class="middle" onclick="show(<%=i%>);">
+                            <div class='middle-content'>
+                                <h4><%= p.name %></h4>
+                                <p><%= p.body %></p>
+                                <div class='middle-bottom'>
+                                    
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <% i++; %>
                 <% }); %>
             </div>
         
 
         <div id='home-padding'></div>
-
-        
-        <div class="modal fade" id="exampleModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel"
-            aria-hidden="true">
-            <div class="modal-dialog" role="document">
-                <div class="modal-content">
-                    <div class="modal-header">
-                        <h5 class="modal-title" id="exampleModalLabel">Create a Recipe</h5>
-                        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-                            <span aria-hidden="true">&times;</span>
-                        </button>
-                    </div>
-                    <div class="modal-body">
-                        <form action='/upload' enctype="multipart/form-data" method="POST">
-                            <div class="form-group">
-                                <label for="name-text" class="col-form-label">Name</label>
-                                <input type="text" name="name" class="form-control" id="name-text"></input>
-                            </div>
-                            <div class="form-group">
-                                <input type="file" name="file" id="file">
-                            </div>
-                            <div class="form-group">
-                                <label for="message-text" class="col-form-label">Message</label>
-                                <textarea name="message" class="form-control" id="message-text"></textarea>
-                            </div>
-                            <div class="form-group">
-                                    <label for="recipient-name" class="col-form-label">Ingredients</label>
-                                    <input name="ingredients" type="text" class="form-control" id="recipient-name">
-                            </div>
-                            <div class="form-group" id="recipe-form">
-                                <label for="recipe-text" class="col-form-label">Recipe Steps</label>
-                                <div id="instructions">
-                                    <input type="text" name="instructions[]">
-                                </div>
-                                <button class='btn btn-success add-recipe-button' type='button'><b>+</b></button>
-                                <button class='btn btn-danger delete-recipe-button' type='button'><b>-</b></button>
-                            </div>
-                            <div class="form-group">
-                                <label for="recipient-name" class="col-form-label">Tags</label>
-                                <input name="tags" type="text" class="form-control" id="recipient-name">
-                            </div>
-                            <div class="modal-footer">
-                                <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
-                                <button type="submit" class="recipe-post-button btn btn-primary">Post</button>
-                            </div>
-                        </form>
-                    </div>
-                </div>
-            </div>
-        </div>
-        <div class='all-posts'>
-            <% posts.reverse().forEach(p => { %>
-            <div class='post-container'>
-                <div class='post'>
-                    <div class='post-left'>
-                        <div class='image-container'>
-                            <img class='post-image' src="/image/<%=p.image.data%>" id='recipe-pic'/>
-                        </div>
-                    </div>
-                    <div class='post-right'>
-                        <img class='post-user-pic' src='/pics/user.png'>
-                        <h3 class=post-name><%= p.name %></h3>
-                        <div class='post-body'>
-                            <p><%= p.body %></p>
-                        </div>
-                        <div class='post-buttons'>
-                            <div class='post-button-entry'>
-                                    <button class='post-btn btn btn-light' type='submit'>&#9825;</button>
-                            </div>
-                            <div class='post-button-entry'>
-                                    <button class='post-btn btn btn-light' type='submit'>Share</button>
-                            </div>
-                            <div class='post-button-entry'>
-                                <form action='/<%= p._id %>/save' method="POST">
-                                    <button class='post-btn btn btn-light' type='submit'>Save</button>
-                                </form>
-                            </div>
-                    </div>
-                    <hr>
-                        <div class='post-comments'>
-                            <% if (p.comments.length === 0) { %>
-                                <p style='text-align: center; color: rgb(88, 88, 88)'>No comments.</p>
-                            <% } %>
-                            <% p.comments.forEach( (comment) => { %>
-                                <div class='comment-single'>
-                                    <img class='comment-user-pic' src='/pics/user.png'/>
-                                    <a class='comment-body'><%=comment.body%></a>
-                                </div>
-                            <%}); %>
-                        </div>
-                        <div class='comment-form'>
-                            <form action="/<%= p._id %>/comment" method="POST">
-                                <textarea class="post-comment" id="comment" name="comment" type="text" placeholder="Enter a comment"></textarea>
-                                <button class="comment-button">Reply</button>
-                            </form>
-                        </div>
-                  </div>
-            </div>
-        </div>
-        <% }); %>
-    </div>
-
-
 
         <% include ./partials/footer.ejs %>
     </div>
