--- a/views/partials/navbar.ejs
+++ b/views/partials/navbar.ejs
@@ -3,25 +3,22 @@
 
 <!-- navbar.ejs -->
 <nav class="navbar navbar-expand-lg navbar-light" style='height: 80px; width: 100%; background-color: #65CCB8'>
-        <a class="navbar-brand nav-text" style='size: 40px; width: 80px; font-weight: bold; color: white;' href="/">VegHub</a>
-        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarText" aria-controls="navbarText" aria-expanded="false" aria-label="Toggle navigation">
-          <span class="navbar-toggler-icon"></span>
-        </button>
+        <a class="navbar-brand nav-text" style='font-size: 22px; width: 80px; font-weight: bold; color: white; ' href="/">VegHub</a>
         <div class="collapse navbar-collapse" id="navbarText">
-          <div class='navbar-margin'>
-            <ul class="navbar-nav mr-auto" style="margin-bottom: -20px;">
-              <li class="nav-item">
-                <a class="nav-link nav-text nav-single" style='font-weight: bold; color: white; font-size: 18px;' href="recipe">Recipes</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link nav-text nav-single" style='font-weight: bold; color: white; font-size: 18px;' href="profile">Profile</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link nav-text nav-single" style='font-weight: bold; color: white; font-size: 18px;' data-toggle="modal" data-target="#exampleModal"
-              data-whatever="@mdo">Upload</a>
-              </li>
-            </ul>
-          </div>
+          <ul class="navbar-nav mr-auto" style="list-style: none">
+            <li class="nav-item">
+              <a class="nav-link nav-text nav-single" style='font-weight: bold; color: white; font-size: 18px;' href="recipe">Recipes</a>
+            </li>
+            <% if (user) { %>
+            <li class="nav-item">
+              <a class="nav-link nav-text nav-single" style='font-weight: bold; color: white; font-size: 18px;' href="profile">Profile</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link nav-text nav-single" style='font-weight: bold; color: rgb(255, 255, 255); font-size: 18px;' data-toggle="modal" data-target="#exampleModal"
+            data-whatever="@mdo">Upload</a>
+            </li>
+            <% } %>
+          </ul>
           
           <span class="navbar-text">
             
@@ -29,17 +26,17 @@
                 <input type="text" placeholder="Search.." name="search">
                 <button type="submit"><i class="fa fa-search"></i></button>
               </form> -->
-              <div class='search-recipe'>
-                  <input id="search-box" type="text" size="20" />
-                  <!-- <img id='search-box-img' src="" /> -->
-                  <button id="recipe-button">Search Food</button>
-                  <div id='food-title'></div>
-              </div>
+              <form action='/search' method='POST'>
+                <div class='search-recipe'>
+                    <input id="search-box" name="query" type="text" size="20" />
+                    <button type="submit" id="recipe-button">Search Food</button>
+                </div>
+              </form> 
             <% if (!user) { %>
               <button onclick='location.href="register"'>Log In</button>
               <button onclick='location.href="register"' style='margin-right: 40px;'>Sign Up</button>
             <% } else { %>
-              <h3 href='profile'><%=user%></h3>
+              <h3 onclick="window.location.href='/profile'" style='cursor: pointer;'><%=user%></h3>
               <a class='nav-link' href='/profile/logout'>Logout</a>
             <% } %> 
             
