--- a/views/recipe.ejs
+++ b/views/recipe.ejs
@@ -8,8 +8,10 @@
     </head>
     <body>
         <% include ./partials/navbar.ejs %>
-        <h1> Recipes </h1>
+        <% include ./partials/upload.ejs %>
 
+        <h1> Recipes </h1>
+      
       <div class='recipe-search-recipe'>
         <input id="recipe-search-box" type="text" size="20" />
         <button id="recipe-search-button">Search Food</button>
@@ -25,16 +27,20 @@
             <h2 style='text-align: center; padding-bottom: 20px;  '>{{name}}</h2>
             <div class='single-recipe-right-entry'>
               <h4 style='text-align: center;'>Ingredients</h4>
-              <ul>
-                {{ingredients}}
+              <ul id='scrollbar'>
+                {{#each ingredients}}
+                  <li>{{this}}</li>
+                {{/each}}
               </ul>
             </div>
-            <div class='single-recipe-right-entry'>
+            <!-- <div class='single-recipe-right-entry'>
                 <h4 style='text-align: center;'>Recipe</h4>
                 <ul>
-                  {{recipe}}
+                  {{#each recipe}}
+                    <li>{{this}}</li>
+                  {{/each}}
                 </ul>
-              </div>
+            </div> -->
           </div>
         </div>
       </script>
@@ -42,37 +48,31 @@
       <div id='query-list'>
 
       </div>
+
       <div class='all-recipes'>
+        <% var i = 0; %>
         <% posts.forEach( (p) => { %>
+          <div class='show-single-recipe<%=i%> recipe-hover recipe-hidden'>
+              <% include ./partials/recipe-page.ejs %>
+          </div>
           <div class='single-recipe'>
-              <div id='show-single-recipe' class='recipe-hover recipe-hidden'>
-                <% include ./partials/recipe-partial.ejs %>
-              </div>
-              <div class='single-recipe-left'>
+              <div class='single-recipe-left' onclick='show(<%=i%>)'>
                   <div class='image-container'>
                       <img class='post-image' src="/image/<%=p.image.data%>"/>
                   </div>
               </div>
-            <div class='single-recipe-right'>
+            <div class='single-recipe-right' id='scrollbar'>
               <h2 style='text-align: center; padding-bottom: 20px;  '><%=p.name%></h2>
-              <div class='single-recipe-right-entry'>
-                <h4 style='text-align: center;'>Ingredients</h4>
-                <ul>
-                  <% p.ingredients[0].split(', ').forEach( (i) => { %>
-                      <li><%=i%></li>
+                <h3>Ingredients</h3>
+                <ul class='ingredients'>
+                  <% p.ingredients[0].split(', ').forEach( (ing) => { %>
+                      <li><%=ing%></li>
                   <% }); %>
                 </ul>
-              </div>
-              <div class='single-recipe-right-entry'>
-                  <h4 style='text-align: center;'>Recipe</h4>
-                  <ul class='recipe-list'>
-                    <% p.recipe.forEach( (s) => { %>
-                        <li><%=s%></li>
-                    <% }); %>
-                  </ul>
-                </div>
+                <button class='btn btn-info get-recipe-btn' onclick='show(<%=i%>)'>Get Recipe</button>
             </div>
           </div>
+          <%i++;%>
       <%})%>
     </div>
 
