--- a/views/partials/recipe-partial.ejs
+++ b/views/partials/recipe-partial.ejs
@@ -1,3 +1,7 @@
+<!-- Similar function to recipe-page.ejs but shows description summary of a recipe instead when clicking on a recipe -->
+
+
+
 <div class='post-container'>
         <div class='post'>
             <div class='post-left'>
@@ -20,12 +24,14 @@
                     <div class='post-button-entry'>
                             <button class='post-btn btn btn-light' type='submit'>Share</button>
                     </div> -->
-                    <div class='post-button-entry'>
-                        <input type='hidden' class='id-hidden' value='<%=p._id%>'/>
-                        <form action='/<%= p._id %>/save' class='favorite-form' method="POST">
-                            <button class='post-btn btn btn-light favorite-btn' type='submit'>Favorite</button>
-                        </form>
-                    </div>
+                    <% if (user) { %>
+                        <div class='post-button-entry'>
+                            <input type='hidden' class='id-hidden' value='<%=p._id%>'/>
+                            <form action='/<%= p._id %>/save' class='favorite-form' method="POST">
+                                <button class='post-btn btn btn-light favorite-btn' type='submit'>Favorite</button>
+                            </form>
+                        </div>
+                    <% } %>
                     <!-- <div class='post-button-entry'>
                         <button class='post-btn btn btn-light' onclick='showIngredients(<%=i%>)'>Recipe</button>
                     </div> -->
